--- a/code/style.css
+++ b/code/style.css
@@ -1,14 +1,23 @@
 html {
   background: pink;
-  color: #fff;
+  color: black;
 }
 
-/*{
-  
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}*/
+.main{
+  display: grid;
+   grid-template-columns: 1fr;
+  place-items: center;
+  margin: auto;
+  }
+  a:link { text-decoration: none; }
+
+a:visited { text-decoration: none; }
+
+a:hover { text-decoration: none; }
+
+a:active { text-decoration: none; }
+
+  /*NAV*/
 
 nav{ /*HUr gör jag för att fylla ut hela*/
   background: silver;
@@ -93,7 +102,7 @@ border-bottom: 1px pink solid;
 
 }
 .has-submenu > a::after {
-  /* so we can add icons next to the text*/
+  /*so we can add icons next to the text*/
 font-family: "Font Awesome 5 free";
 font-size: 12px;
 line-height: 16px;
@@ -121,372 +130,106 @@ padding-left: 5px
   border-radius: 50%;
   display: inline-block
 }
-/* slut nav*/
+/*slut nav*/
 
 
 /*MOBIL news*/
 
-.main{
-display: grid;
- grid-template-columns: 1fr;
-place-items: center;
-}
 
-#title{
-grid-column: 1/2;
+.picture-container {
+  grid-column: 1/2;
+     position: relative;
+ 
+     height: 500px;
+ }
+ .picture-container .polaroid
+ {
+  
+     border: 1px solid darkgrey;
+     background-color: white;
+     padding: 15px 15px 60px 15px;
+     box-shadow: 5px 10px 10px darkgrey;
+ }
+ 
+ .picture-container .polaroid:after
+ { content: attr(polaroid-caption);
+     padding: 80px;
+     font-size: 20px;
+  
+     font-family: 'Indie Flower', cursive;
+     color: black;
+ }
+ .picture-container .image1
+ {
+     left: 100px;
+     top: 100px;
+ }
+ .picture-container img{
+   width: 100%;
  }
 
-#title h1{
-  grid-column: 1/2;
-  font-size: 50px;
-}
 
-#title img{
-border: #fff 20px;
- width: 500px;
- height: 500px;
- padding: 10px 10px 10px 10px;
-}
-.solen {
- grid-column: 1/2;
+ .solen .polaroid
+
+ {border: 1px solid darkgrey;
+     background-color: white;
+     padding: 15px 15px 30px 15px;
+     box-shadow: 5px 10px 10px silver;
+ }
  
+ .solen .polaroid:after
+ {
+   content: attr(polaroid-caption);
+    padding-left: 95px;
+     font-size: 40px;
+     font-family: 'Indie Flower', cursive;
+     color: black;
+ }
+ .solen .image1
+ {
+     left: 100px;
+     top: 100px;
+ }
+ .solen img{
+   width: 100%;
+ }
 
-}
-
-.bildwrapwrap{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.bildwrap{
-  width: 100%; /*or whatever you choose*/
-   margin: auto;
-}
-
-.bildwrap img{
-  border: white solid 20px;
-  display:block;
-  max-width: 400px;
-  width: 100%;
-  height: auto;
-  margin: auto;
-  
-}
-
-.BOX{
+ .bildersmall{
 display: grid;
 grid-template-columns: 1fr;
-
-  
-}
-
-.BOX h3{
-font-size: 30px;
-text-align: center;
-padding: 5px 5px;
-
-}
-
-.BOX p{
-display: flex;
-justify-content: center;
-font-size: 15px;
-}  
-.small-newswrap{
-
-  border: solid 20px;
-  display:block;
-  max-width: 400px;
-  width: 100%;
-  height: auto;
-  margin: auto;
-
-}
-
-
-/*PADDA*/
-@media all and (min-width: 700px) {
-
-  .menu{
-      justify-content: center;
-  }
-
-  .logo {
-      flex: 1;
-  }
-  .item.button {
-      width: auto;
-      order: 1;
-      display: block;
-  }
-  .toggle {
-      flex: 1;
-      text-align: right;
-      order: 2;}
-
-      /* Button up from tablet screen*/
-    .menu li.button a {
-      padding: 10px 15px;
-      margin: 5px 0;
-  }
-  .button a {
-      background: #0080ff;
-      border: 1px royalblue solid;
-  }
-  .button.secondary {
-      border: 0;
-  }
-  .button.secondary a {
-      background: transparent;
-      border: 1px #0080ff solid;  
-  }
-  .button a:hover {
-      text-decoration: none;
-  }
-  .button:not(.secondary) a:hover {
-      background: royalblue;
-      border-color: darkblue;
-  }
-
-
-/*START PADDA*/
-
-
-  .main{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    place-items: start;
-    }
-    
-    #title{
-    grid-column: 1/3;
-     }
-    
-    #title h1{
-      grid-column: 1/3;
-      font-size: 50px;
-      border: yellow solid 10px;
-    }
-    
-    #title img{
-      border: white solid 20px;
-      display:block;
-      max-width: 600px;
-      height: auto;
-      margin: auto;
-    }
-    
-    
-.solen {
-grid-column: 1/3;
-      }
-
-    .solen p, h2{
-      grid-column: 2/3;
-      text-align: center;
-    }
+position: relative;
+height: 500px;
+ }
+ .bildersmall .polaroid
+ {
+     border: 1px solid darkgrey;
+     background-color: white;
+     padding: 15px 15px 30px 15px;
+     box-shadow: 10px 10px 50px 10px darkgrey;
+ }
  
-    
-
-.solen img{
-  border: white solid 20px;
-  display:block;
-  max-width: 400px;
-  width: 100%;
-  height: auto;
-  margin: auto;
-  
-}
-
-.BOX{
-display: grid;
-grid-template-columns: 1fr 1fr;
-grid-template-rows: 1fr 1fr 1fr;
-  
-}
-
-.BOX h3{
-font-size: 30px;
-text-align: center;
-padding: 5px 5px;
-
-}
-
-.BOX p{
-text-align: center;
-}
-
-  
-#food{
-  grid-column: 1/2; 
-}
-#days{
-  grid-column: 2/3;
-}
-#drinks{
-  grid-column: 1/2;
-}
-#beaches{
-  grid-column: 2/3;
-}
-#pets{
-  grid-column: 1/2;
-}
-#night{
-  grid-column: 2/3;
-}
-#trams{
-  grid-column: 1/2;
-}
-#walking{
-  grid-column: 2/3
-}
-}
-
-
-
-/*desktop
-
-@media (min-width:960px) {
-
-  /*navigation
- .menu{ align-items: flex-start;     
-  flex-wrap: nowrap;
-  background: violet;
+ .image2  .image3 .image4 .image5 
+ .image6 .image7 .image8 .polaroid:after
+ {
+   content: attr(polaroid-caption);
+    padding-left: 95px;
+     font-size: 40px;
+     font-family: 'Indie Flower', cursive;
+     color: black;
+ }
+ .bildersmall .image1
+ {
+     left: 100px;
+     top: 100px;
  
-}
-.logo {
-  order: 0;
+ }
+ .bildersmall img{
+   width: 100%;
+ }
+ 
+ .bildersmall h3{
+   font-family: 'Indie Flower', cursive;
+     color: black;
+     text-align: center;
+ }
 
-}
-
-.logo img{
-  height: 300px;
-  width: 300px;
-
-}
-.item {
-  order: 1;
-  position: relative;
-  display: block; 
-  width: auto;
-}
-.button {
-  order: 2;
-}
-.submenu-active .submenu {
-  display: block;
-  position: absolute;
-  left: 0;
-  top: 68px;
-  background: #111;
-}
-.toggle {
-  display: none;
-}
-.submenu-active {
-  border-radius: 0;
-}
-/*navigation stop*/
-
-/*START
-.main{
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-}
-} */
-
-@media (min-width:960px){
-.main{
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  place-items: start;
-  }
-  
-  #title{
-  grid-column: 1/5;
-   }
-  
-  #title h1{
-    grid-column: 1/5;
-    font-size: 50px;
-    border: yellow solid 10px;
-  }
-  
-  #title img{
-    border: white solid 20px;
-    display:block;
-    max-width: 600px;
-    height: auto;
-    margin: auto;
-  }
-  
-  
-.solen {
-grid-column: 1/5;
-    }
-
-  .solen p, h2{
-    grid-column: 2/3;
-    text-align: center;
-  }
-
-  
-
-.solen img{
-border: white solid 20px;
-display:block;
-max-width: 400px;
-width: 100%;
-height: auto;
-margin: auto;
-
-}
-
-.BOX{
-display: grid;
-grid-template-columns: 1fr 1fr 1fr 1fr;
-
-column-gap: 20px ;
-
-}
-
-.BOX h3{
-font-size: 30px;
-text-align: center;
-padding: 5px 5px;
-
-}
-
-.BOX p{
-text-align: center;
-}
-.small-newswrap img{
-
-}
-
-#food{
-grid-column: 1/2; 
-}
-#days{
-grid-column: 2/3;
-}
-#drinks{
-grid-column: 3/4;
-}
-#beaches{
-grid-column: 4/5;
-}
-#pets{
-grid-column: 1/2;
-}
-#night{
-grid-column: 2/3;
-}
-#trams{
-grid-column: 3/4;
-}
-#walking{
-grid-column: 4/5
-}
-}
