added the media query to make the small news card grid 4 columns

--- a/code/style.css
+++ b/code/style.css
@@ -206,7 +206,10 @@ footer img:hover {
 
 
 @media (min-width: 1024px) {
-
+  .small-card {
+    grid-column: span 2;
+    margin-bottom: 40px;
+   }
 }
 
 
