--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,44 @@
 html {
-  background: #0025ff;
-  color: #fff;
+  background: white;
+  color: #6e7b8b;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
 }
+
+p {
+  font-size: 18px;
+}
+
+.Name-of-website {
+  color: black; 
+  font-style: italic;
+  font-size: 48px;
+}
+
+.top {
+  background-color: #ede3d8;
+  padding: 35px;
+  width: 1400px;
+}
+
+.big-news {
+  background-color: #b2d8b2;
+  padding: 35px;
+  width: 1400px;
+}
+
+.big-news img {
+width: 100%;
+}
+
+.Other-news {
+  background-color: gainsboro;
+  padding: 35px;
+  width: 400px;
+}
+
+.Other-news img {
+  width: 100%;
+}
+
+
