--- a/code/style.css
+++ b/code/style.css
@@ -7,6 +7,7 @@
 html {
   background: #b3d8f2;
   color: black;
+  font-size: calc(15px + 0.390625vw);
 }
 
 body {
@@ -17,13 +18,58 @@ header {
   border-bottom: solid 2px;
 }
 
+p {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  padding: 0px 15px 0px 15px;
+  text-align: justify;
+}
+
+h1 {
+  color: #0415d1;
+  font-family: didot;
+  font-size: 1.8rem;
+  font-weight: bold;
+  grid-column: 2 / 6;
+}
+
+h2 {
+  font-family: georgia;
+  font-style: italic;
+  font-size: 1.9rem;
+  text-align: left;
+  border-left: solid 2px;
+  padding: 0px 0px 0px 20px;
+  margin: 20px;
+}
+
+h3 {
+  background-color: yellow;
+  font-size: 1.2rem;
+  font-family: georgia;
+  font-style: italic;
+  text-align: left;
+  border-left: solid 2px;
+  padding: 10px 15px 5px 15px;
+  margin: 20px 20px 0px 20px;
+}
+
+h4 {
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: 1rem;
+  padding: 20px 20px 10px 20px;
+}
+
+.nav {
+  grid-column: 9 / 12;
+  margin: 10px;
+} 
+
 .nav-bar {
   display: grid;
   /*grid-template-columns: repeat(11, 1fr);*/
   grid-template-columns: 85px 3fr 2fr;
-  grid-template-rows: 60px;
   background: white;
-  height: 60px;
+  height: 70px;
   margin-bottom: 15px;
   align-items: center;
   
@@ -35,55 +81,13 @@ header {
 
 .logo-container {
   grid-column: 1 / 2;
-  margin: 10px;
+  margin: 15px;
 }
-
-h1 {
-  color: black;
-  font-family: didot;
-  font-size: 28px;
-  font-style: italic;
-  grid-column: 2 / 6;
-}
-
-h2 {
-  font-family: georgia;
-  font-style: italic;
-  font-size: 36pt;
-  text-align: left;
-  border-left: solid 2px;
-  padding-top: 0px;
-  padding-bottom: 0px;
-  padding-left: 20px;
-  margin: 20px;
-}
-
-h3 {
-  background-color: yellow;
-  padding: 10px 15px 5px 15px;
-  font-size: x-large;
-  font-family: georgia;
-  color: black;
-  font-style: italic;
-  text-align: left;
-  margin: 0 auto;
-}
-
-h4 {
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  font-size: 18px;
-  padding: 20px 20px 10px 20px;
-  text-align: left;
-}
-
-.nav {
-  grid-column: 9 / 12;
-  margin: 10px;
-} 
 
 .nav-item {
   color: black;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-family: didot;
+  font-size: 1rem;
   font-style: oblique;
   text-decoration: none;
   padding: 10px;
@@ -96,32 +100,28 @@ a:hover {
 
 .big-news-box {
   display: flex;
+  height: 500px;
   margin: 20px;
 }
 
 .big-image {
-  height: 500px;
+  width: auto;
+  height: 100%;
   object-fit: fill;
   margin-right: 15px;
   border-radius: 2%;
 }
 
 .big-news-textbox {
+  width: auto;
+  height: 100%;
   background: pink;
   border-radius: 2%;
 }
 
-p {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  padding: 0px 15px 0px 15px;
-  text-align: justify;
-}
-
 .big-news-paragraph {
-  /*font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  */
-  font-size: small;
-  padding: 20px;
+  font-size: 0.77rem;
+  padding: 0px 20px 0px 20px;
 }
 
 .line-1 {
@@ -143,7 +143,7 @@ p {
 .small-news {
   display: flex;
   background: whitesmoke;
-  height: 450px;
+  height: 470px;
   width: 100%;
   flex-direction: column;
   align-items: center;
@@ -156,13 +156,22 @@ h2:hover, h3:hover {
 }
 
 .small-image {
-  height: 180px;
+  height: auto;
+  width: 100%;
+  padding: 15px 20px 15px 20px;
   object-fit: fill;
 }
 
 .small-news-text {
-  font-size: small;
-  padding: 0px 15px 10px 15px;
+  font-size: 0.6rem;
+  padding: 0px 20px 5px 20px;
+}
+
+.signature-small {
+  font-size: 0.6rem;
+  font-weight: bold;
+  font-stretch: ultra-condensed;
+  padding-bottom: 20px;
 }
 
 
@@ -219,7 +228,7 @@ h3 {
 
 .small-news {
   grid-column: 1fr;
-  height: auto;
+  height: 500px;
   width: auto;
 }
 
@@ -232,7 +241,7 @@ h3 {
 }
 
 
-@media (min-width: 667px) (max-width: 1024px) {
+@media (min-width: 667px) and (max-width: 1024px) {
   .header {
   }
 
@@ -242,27 +251,45 @@ h3 {
   grid-template-rows: 60px;
   /*width: auto;*/
   }
+
+  h2 {
+    font-size: 18pt;
+    margin: 20px 20px 5px 20px;
+  }
+  
+  h3 {
+    font-size: large;
+  }
+
+  h4 {
+    font-size: x-small;
+    padding: 10px 20px 10px 20px;
+  }
  
   .big-news-box {
     max-width: 100%;
   }
   
   .big-image {
+    width: auto;
+    height: 250px;
   }
   
   .big-news-textbox {
   }
-  
+
   .big-news-paragraph {
+    font-size: x-small;
+    padding: 10px 20px 10px 20px;
   }
   
   .news-grid { 
-    grid-template-columns: 4fr;
-    grid-template-rows: 1fr;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 4fr;
   }
   
   .small-news {
-    grid-column: span 4fr;
+    grid-column: 1fr;
   }
 
 }
