--- a/code/style.css
+++ b/code/style.css
@@ -20,11 +20,7 @@ body {
   height: auto;
 }
 
-.nav-link {
-  list-style-type: none;
-}
-
-.nav-link .nav-list {
+ .nav-list {
   display: inline-block;
   padding: 20px 10px;
 }
@@ -52,43 +48,20 @@ body {
 
 .headline {
   display: flex;
-  border: 1 px solid white;
-  box-shadow: 0px 0px 0px 12px coral;
+  box-shadow: 0px 0px 0px 10px coral;
   background-color: white;
   max-width: 100%;
-}
-
-.headline-image {
-  max-width: 50%;
-  margin: 0;
 }
 
 .headline-image img {
   width: 100%;
   height: 100%;
-  margin: 0;
   object-fit: cover;
 }
 
 .main-article {
-  display: block;
   margin: 8% 4%;
   max-width: 50%;
-  height: auto;
-}
-
-.main-article h1 {
-  font-size: h1;
-  color: black;
-}
-
-.main-article a {
-  text-decoration: none;
-  color: black;
-}
-
-.main-article a:hover {
-  color: gray;
 }
 
 .main-article h3 {
@@ -104,14 +77,12 @@ body {
 
 .headline button {
   display: block;
-  text-align: center;
   border: none;
   font-size: 15px;
   background-color: coral;
   padding: 10px 20px;
   margin: auto;
   border-radius: 20px;
-  text-decoration: none;
 }
 
 .headline button a {
@@ -120,22 +91,20 @@ body {
 }
 
 .headline button a:hover {
-  color: gray;
+  color: black;
 }
 
 .container-grid {
   display: grid;
   grid-template-columns: 25% 25% 25% 25%;
-  margin-left: 35px;
   margin: 35px;
 }
 
 .news-grid {
-  margin: 80px 20px 20px 20px;
+  margin: 30px 20px 20px 30px;
   padding: 0 0 30px 0;
-  border: 1px solid white;
+  border: 1px solid black;
   box-shadow: 1px 2px 50px gray;
-  background-color: white;
 }
 
 .news-grid p {
@@ -146,16 +115,12 @@ body {
 
 .news-grid h1 {
   text-align: center;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .news-grid a {
   text-decoration: none;
   color: black;
-}
-
-.news-grid a:hover {
-  color: gray;
 }
 
 .grid-image {
@@ -174,12 +139,11 @@ body {
 
 .news-grid p {
   text-align: center;
-  font-size: 16px;
+  font-size: 15px;
 }
 
 .grid-button {
   display: block;
-  text-align: center;
   border: none;
   font-size: 15px;
   background-color: coral;
@@ -194,7 +158,7 @@ body {
 }
 
 .grid-button a:hover {
-  color: gray;
+  color: black;
 }
 
 .main-footer {
@@ -202,8 +166,7 @@ body {
   background: coral;
   color: black;
   font-size: 10px;
-  padding: 5px;
-  margin: 5px;
+  padding: 1px;
 }
 
 .main-footer a {
@@ -211,7 +174,7 @@ body {
 }
 
 .main-footer a:link {
-  text-decoration: none;
+  /* text-decoration: none; */
 }
 
 .main-footer a:hover {
