--- a/code/style.css
+++ b/code/style.css
@@ -149,6 +149,27 @@ button {
   margin-top: 5px;
   border: 4px solid #275DF1;
   border-radius: 6px;
+
+  box-shadow: 0 0 0 0 rgb(148, 196, 224);
+  animation: animation-button 2s infinite;
+}
+
+/* animation for button */
+@keyframes animation-button {
+  0% {
+		transform: scale(0.95);
+		box-shadow: 0 0 0 0 rgb(148, 196, 224);
+	}
+
+	70% {
+		transform: scale(1);
+		box-shadow: 0 0 0 5px rgb(148, 196, 224);
+	}
+
+	100% {
+		transform: scale(0.95);
+		box-shadow: 0 0 0 0 rgb(148, 196, 224);
+	}
 }
 
 .big-news img {
